tests/extensions/classes/valid/fieldNameOutside.wacc
begin
    class sa is
        int s
    end
    int s = 1
end