tests/extensions/classes/semanticErr/repeatedField.wacc
begin
    class sa is
        int s
        int s
    end
    skip
end